--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-resizable-panels": "^2.1.9",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.4",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
@@ -73,8 +74,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.32.0",
     "babel-plugin-react-compiler": "latest",
+    "eslint": "^9.32.0",
     "eslint-config-next": "16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
