--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "latest",
+    "canvas": "^3.2.1",
     "eslint": "^9.32.0",
     "eslint-config-next": "16.1.6",
+    "gif-encoder-2": "^1.0.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
