--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.83.0",
+    "0g": "^0.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -49,6 +50,8 @@
     "lucide-react": "^0.462.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "npm": "^11.10.1",
+    "opencode-ai": "^1.2.8",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
